unpackaged/main/default/objects/SDO_Community_Training_Course__c/SDO_Community_Training_Course__c.object-meta.xml
<CustomObject>
    <description>What: A training course that can be taken by employees, customers, and partners. Represents how a typical Learning Management System (LMS) would integrate with Salesforce. Used heavily with Salesforce CMS in a community.</description>
    <label>Training Course</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>