unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Available_for_Registration__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Registration__c</fullName>
    <formula>ISPICKVAL(Course_Status__c, &#39;Available for Registration&#39;) &amp;&amp;  Starts__c &gt;= NOW()</formula>
    <inlineHelpText>Indicates whether a course can be registered for. Shows TRUE if the status is &#39;Available for Registration&#39; and the course starts in the future.</inlineHelpText>
    <label>Available for Registration</label>
    <type>Checkbox</type>
</CustomField>