unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Course_Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Course_Curriculum__c</fullName>
    <inlineHelpText>Detailed curriculum for this course.</inlineHelpText>
    <label>Course Curriculum</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>