unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Course_Flag__c.field-meta.xml
<CustomField>
    <fullName>Course_Flag__c</fullName>
    <inlineHelpText>Gives a way to flag a particular course in course listings.</inlineHelpText>
    <label>Course Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SDO_Community_CMS_Flags</valueSetName>
    </valueSet>
</CustomField>