unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Course_Format__c.field-meta.xml
<CustomField>
    <fullName>Course_Format__c</fullName>
    <inlineHelpText>Format of the training course: Online, in person, etc.</inlineHelpText>
    <label>Course Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>