unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Course_Image__c.field-meta.xml
<CustomField>
    <fullName>Course_Image__c</fullName>
    <inlineHelpText>URL to an image representing this course. Will be used on pages in Lightning Community and Salesforce CMS.</inlineHelpText>
    <label>Course Image</label>
    <type>Url</type>
</CustomField>