unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <inlineHelpText>A brief description of the course.</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>