unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Starts__c.field-meta.xml
<CustomField>
    <fullName>Starts__c</fullName>
    <defaultValue>NOW() + 5</defaultValue>
    <inlineHelpText>Start date &amp; time for the course.</inlineHelpText>
    <label>Starts</label>
    <type>DateTime</type>
</CustomField>