unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Total_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Completed__c</fullName>
    <inlineHelpText>Total number of people who have completed this course.</inlineHelpText>
    <label>Total Completed</label>
    <summaryFilterItems>
        <field>SDO_Community_Course_Enrollment__c.Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>SDO_Community_Course_Enrollment__c.Training_Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>