unpackaged/main/default/objects/SDO_Community_Training_Course__c/fields/Total_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Enrolled__c</fullName>
    <inlineHelpText>Number of people enrolled in this course.</inlineHelpText>
    <label>Total Enrolled</label>
    <summaryFilterItems>
        <field>SDO_Community_Course_Enrollment__c.Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Assigned, Enrolled</value>
    </summaryFilterItems>
    <summaryForeignKey>SDO_Community_Course_Enrollment__c.Training_Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>