unpackaged/main/default/objects/SDO_Community_Training_Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Format__c</columns>
    <columns>Available_for_Registration__c</columns>
    <columns>Course_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>